--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "pk-bot",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "dev": "bun --hot index.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
